using System;

namespace PolyclinicApplication.DTOs.Departments
{
    public class DepartmentDto
    {
        public Guid DepartmentId { get; set; }
        public string? Name { get; set; }
    }
}
